--- a/public/index.html
+++ b/public/index.html
@@ -21,15 +21,15 @@
 		<nav>
 			<a href="/">Home</a>
 			<a href="/products/list">My Products</a>
-			<a href="/dishes/list">My Dishes</a>
+			<a href="#!/dishes">My Dishes</a>
 			<a href="/dev">Development</a>
 			<a href="/logout">Logout</a>
 		</nav>
 		<section>
 			<script type="text/template" id="menu-blocks-template">
 				<h1>Fooding</h1>
-				<a href="/products/list">Products</a>
-				<a href="/index.html">My Dishes</a>
+				<a id="navigate-products" href="/products/list">Products</a>
+				<a href="#!/dishes">My Dishes</a>
 			</script>
 			<div id="menu-blocks" class="profile-menu-blocks"></div>	
 			<script type="text/template" id="new-dish-template">
