--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,17 @@
 	<script type="text/javascript" src="/scripts/underscore-min.js"></script>	
 	<script type="text/javascript" src="/scripts/backbone-min.js"></script>	
 	<script type="text/javascript" src="/scripts/main.js"></script>	
-	<script type="text/javascript" src="/scripts/client-dishes.js"></script>
+	<script type="text/javascript" src="/scripts/index.js"></script>
 </head>
 <body>
 	<div class="page">
 		<header>			
 		</header>
 		<nav>
-			<a href="/">Home</a>
+			<a href="#!/">Home</a>
 			<a href="/products/list">My Products</a>
 			<a href="#!/dishes">My Dishes</a>
-			<a href="/dev">Development</a>
+			<a href="#!/dev">Development</a>
 			<a href="/logout">Logout</a>
 		</nav>
 		<section>
@@ -60,6 +60,41 @@
 				</form>
 			</script>
 			<div id="new-dish-panel"></div>
+
+			<script type="text/template" id="dev-views-template">
+				<h1>Development & Administration</h1>
+				<form method="post" class="dev-create" action="/api/dev/products/db">
+					<label>Create products database</label>
+					<input type="submit" value="submit" />
+					<div class="cl"></div>
+				</form>
+				<form method="post" class="dev-create" action="/api/dev/products/all">
+					<label>Create products/all view</label>
+					<input type="submit" value="submit" />
+					<div class="cl"></div>
+				</form>
+				<form method="post" class="dev-create" action="/api/dev/products/getByName">
+					<label>Create findProduct/byName view</label>
+					<input type="submit" value="submit" />
+					<div class="cl"></div>
+				</form>
+				<form method="post" class="dev-create" action="/api/dev/accounts/db">
+					<label>Create accounts database</label>
+					<input type="submit" value="submit" />
+					<div class="cl"></div>
+				</form>
+				<form method="post" class="dev-create" action="/api/dev/accounts/all">
+					<label>Create accounts/all view:</label>
+					<input type="submit" value="submit" />
+					<div class="cl"></div>
+				</form>
+				<form method="post" class="dev-create" action="/api/dev/accounts/getByEmail">
+					<label>Create accounts/getByEmail view:</label>
+					<input type="submit" value="submit" />
+					<div class="cl"></div>
+				</form>
+			</script>
+			<div id="dev-views"></div>
 
 			<script type="text/template" id="error-template">
 				<label class="errormsg"></label>
