--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
       <div id="menubar">
         <ul id="menu">
           <!-- put class="current" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="current"><a href="index.html">Home</a></li>
+          <li class="current"><a href="/index.html">Home</a></li>
+		  <li><a href="/map.html">Map</a></a>
         </ul>
       </div>
     </div>
