--- a/public/demo.html
+++ b/public/demo.html
@@ -47,7 +47,7 @@
 			</select>
 		</div>	
 	</div>
-	<script type="text/javascript" src="/scripts/knockout-2.1.0.debug.js"></script>
+	<script type="text/javascript" src="/scripts/libs/knockout-2.1.0.debug.js"></script>
 	<script type="text/javascript" src="/scripts/demoapp.js"></script>
 	<script type="text/javascript">
 		var app = new myApp.App();
