--- a/public/map.html
+++ b/public/map.html
@@ -17,12 +17,10 @@
 	#marker-form textarea { width: 150px; }
 	#marker-form input[type=submit] {display:block; float:right; cursor:pointer; }
   </style>
-  <!--<script type="text/javascript" src="/scripts/jquery-1.8.2.min.js"></script>-->
-  <!--<script type="text/javascript" src="/scripts/jquery-ui.min.js"></script>-->
-  <!--<script type="text/javascript" src="/scripts/jquery.mobile-1.1.1.min.js"></script>-->
   <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAAC3ZLskBPf_w330GJSiFMHRT1if6vMBfe-BBdhBTfHcHFUdg2xxRvK-GmG_CIfOFXhqjYjDofqcdSFQ" type="text/javascript"></script>
-  <!--<script type="text/javascript" src="/scripts/knockout.min.js"></script>-->
-  <script type="text/javascript" src="/scripts/json2.js"></script>
+  <script type="text/javascript" src="/scripts/libs/json2.js"></script>
+  <script type="text/javascript" src="/scripts/el.js"></script>
+  <script type="text/javascript" src="/scripts/ajax.js"></script>
   <script type="text/javascript" src="/scripts/map.js"></script>
 </head>
 
