--- a/public/map.html
+++ b/public/map.html
@@ -18,8 +18,9 @@
 	#marker-form input[type=submit] {display:block; float:right; cursor:pointer; }
   </style>
   <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAAC3ZLskBPf_w330GJSiFMHRT1if6vMBfe-BBdhBTfHcHFUdg2xxRvK-GmG_CIfOFXhqjYjDofqcdSFQ" type="text/javascript"></script>
-  <script type="text/javascript" src="/scripts/libs/yepnope.js"></script>
   <script type="text/javascript" src="/scripts/libs/modernizr.js"></script>
+  <script type="text/javascript" src="/scripts/libs/json2.js"></script>
+  <script type="text/javascript" src="/scripts/libs/socket.io.js"></script>
   <script type="text/javascript" src="/scripts/el.js"></script>
   <script type="text/javascript" src="/scripts/ajax.js"></script>
   <script type="text/javascript" src="/scripts/map.js"></script>
